# arcane_swarm

./: .dockerignore  .env.v2.repro.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  REPRODUCIBILITY.md  docker-compose.v2.repro.yml  docker-compose.v2.yml
.github/workflows/: ci.yml  publish-benchmark-images.yml
crates/arcane-benchmark-swarm/: Cargo.toml
crates/arcane-benchmark-swarm/src/: lib.rs
crates/arcane-swarm/: Cargo.toml
crates/arcane-swarm/src/: burst.rs  config.rs  delta_cache.rs  engine_api.rs  lib.rs  metrics.rs  orchestration.rs  player.rs  protocol.rs  reporter.rs
docker/: Dockerfile.arcane-infra  Dockerfile.swarm
docs/: BENCHMARK_V2_METHOD.md  CANONICAL_PARAMETERS.md  CLOUD_BENCHMARK_AWS.md  ENGINE_API_BOUNDARY.md  EXPERIMENT_REPORT.md  MODULE_INTERACTIONS.md
infra/aws/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: Install-WasmOpt.ps1
scripts/benchmark/: Analyze-BenchmarkErrors.ps1  Run-Benchmark-V2.ps1
scripts/cloud/: Run-Benchmark-V2-Aws.ps1
scripts/docker/: Publish-Images.ps1
scripts/swarm/: Run-ArcaneScalingSweep.ps1  Run-Benchmark-Scenarios.ps1  Run-FullBenchmark-Incremental.ps1  Run-FullBenchmark.ps1  Run-SpacetimeDBCeilingSweep.ps1
spacetimedb_demo/spacetimedb/: Cargo.toml
spacetimedb_demo/spacetimedb/src/: lib.rs
