[package]
name = "arcane-benchmark-swarm"
version = "0.1.0"
edition = "2021"
description = "Benchmark swarm binary (vendored from arcane-demo) for Arcane+SpacetimeDB scaling experiments."

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "arcane-swarm"
path = "src/bin/arcane_swarm.rs"

