[package]
name = "arcane-swarm"
version = "0.1.0"
edition = "2021"
description = "Generic headless swarm runner for Arcane-compatible workloads."

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
# SpacetimeDB-only mode uses the native SDK over a persistent WebSocket instead of
# per-call HTTP POSTs. Match the server CLI version (2.1.0) so binding regeneration
# stays in sync. Bindings live in src/bin/arcane_swarm/spacetimedb_bindings/ and are
# produced by `spacetime generate --lang rust --module-path <full module>`.
spacetimedb-sdk = "2.1"

[[bin]]
name = "arcane-swarm"
path = "src/bin/arcane_swarm/main.rs"

